--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: "It's new $module"
+abstract: 'Scan prerequisite modules and generate CPANfile'
 author:
   - 'tokuhirom <tokuhirom@gmail.com>'
 build_requires:
@@ -26,7 +26,7 @@ no_index:
 provides:
   App::scan_prereqs_cpanfile:
     file: lib/App/scan_prereqs_cpanfile.pm
-    version: 0.01
+    version: 0.02
 requires:
   CPAN::Meta: 0
   CPAN::Meta::Requirements: 0
@@ -41,4 +41,4 @@ resources:
   bugtracker: https://github.com/tokuhirom/App-scan_prereqs_cpanfile/issues
   homepage: https://github.com/tokuhirom/App-scan_prereqs_cpanfile
   repository: git://github.com/tokuhirom/App-scan_prereqs_cpanfile.git
-version: 0.01
+version: 0.02
