--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.0.49, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Minilla/v0.0.53, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,10 +23,11 @@ no_index:
     - share
     - eg
     - examples
+    - author
 provides:
   App::scan_prereqs_cpanfile:
     file: lib/App/scan_prereqs_cpanfile.pm
-    version: 0.04
+    version: 0.05
 requires:
   CPAN::Meta: 0
   CPAN::Meta::Requirements: 0
@@ -41,6 +42,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/App-scan_prereqs_cpanfile/issues
   homepage: https://github.com/tokuhirom/App-scan_prereqs_cpanfile
   repository: git://github.com/tokuhirom/App-scan_prereqs_cpanfile.git
-version: 0.04
+version: 0.05
 x_contributors:
   - 'Syohei YOSHIDA <syohex@gmail.com>'
+  - 'Kan Fushihara <kan.fushihara@gmail.com>'
